# SuperManager

src/: CMakeLists.txt  ConfigManager.h  NoteTagController.cpp.txt  NoteTagController.h  crypt.cpp  crypt.h  garb.txt  main.cpp
src/Entity/: AbstractObject.h  Note.h  ObjectManager.h  TagObject.h
src/web/: index.htm  testPOST.html
src/web/css/: dashboard.css
src/web/lib/jfeed/: jquery.jfeed.js
src/web/lib/jquery-ui/: index.html  jquery-ui.css  jquery-ui.js  jquery-ui.min.css  jquery-ui.min.js  jquery-ui.structure.min.css  jquery-ui.theme.min.css
